--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -11,6 +11,10 @@ html, body {
   height: 100%;
 }
 
+.bg-primary {
+  background-color: #7babed !important;
+}
+
 body {
   font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -157,7 +161,7 @@ hr.small {
   display: table;
   width: 100%;
   height: 100%;
-  background: url(../img/bg.jpg) no-repeat center center scroll;
+  background: url(../img/tryn-web-bg.jpg) no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
