--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -161,7 +161,7 @@ hr.small {
   display: table;
   width: 100%;
   height: 100%;
-  background: url(../img/tryn-web-bg.jpg) no-repeat center center scroll;
+  background: url(../img/opentransit-web-bg.jpg) no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -202,11 +202,15 @@ hr.small {
 }
 
 .crowding {
-  background-image: url(../img/crowded-bart.jpg)
+  background-image: url(../img/muni-forward-map.png)
 }
 
 .disruptions {
   background-image: url(../img/muni-5-traffic-1.jpg)
+}
+
+.optimize {
+  background-image: url(../img/bart-caltrain-millbrae-station.jpg)
 }
 
 /* Callout */
