--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -9,6 +9,7 @@
 html, body {
   width: 100%;
   height: 100%;
+  overflow-x: hidden; 
 }
 
 .bg-primary {
@@ -190,7 +191,7 @@ hr.small {
 
 
 .service-image {
-  height: 300px;
+  height: 600px;
 }
 
 .route-improvements {
@@ -210,7 +211,7 @@ hr.small {
 }
 
 .optimize {
-  background-image: url(../img/bart-caltrain-millbrae-station.jpg)
+  background-image: url(../img/BARTnewTA.jpg)
 }
 
 /* Callout */
