--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -163,7 +163,7 @@ hr.small {
   display: table;
   width: 100%;
   height: 100%;
-  background: url(../img/opentransit-web-bg.jpg) no-repeat center center scroll;
+  background: url(../img/ttc-opentransit-web-bg-sm.jpg) no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
